# TSUMUGI-dev

./: .gitattributes  .gitignore  .nbstripout  CLAUDE.md  IMPC-project.xmind  README.md  download.sh  index.html  pyproject.toml  requirements.txt  sklearn.py  utils.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: e2e-subcommands.yml  pytest.yml
TSUMUGI/: .gitignore  TSUMUGI.html  index.html  template_index.html
TSUMUGI/css/: style.css  top.css
TSUMUGI/data/: available_gene_symbols.txt  binary_phenotypes.txt
TSUMUGI/js/: genelist_formatter.js  script.js  top.js
TSUMUGI/template/: template_index.html  template_network_genesymbol.html  template_network_genesymbol.js  template_network_phenotype.html  template_network_phenotype.js
css/: styles.css
doc/: Deploy_checkpoints.md  README.md  README_DE.md  README_ES.md  README_FR.md  README_HI.md  README_ID.md  README_JP.md  README_JP_preview.md  README_KR.md  README_PT.md  README_VN.md  README_ZH_CN.md  README_ZH_TW.md  README_preview.md  RELEASE.md  ROADMAP.md  discussion.md  faq.md  faq_jp.md  introduction.md  methods.md  paper.md  publication_strategy.md  research_questions.md  title-abstract.md  values.md
js/: scripts.js
misc/: IMPC-project.xmind  todo.md
misc/論文読み/: A Mouse for All Reasons.md
notebooks/: 015_download.ipynb  025_filter_by_pvalue.ipynb  027_split_by_mp_term_name.ipynb  028_summarize_symbol_mgi_id.ipynb  029_distinct_symbol_and_mp_term.ipynb  035_calc_overlap.ipynb  045_split_by_mp_term_name.ipynb  050_combine_overlap_and_mp_term_name.ipynb  050_combine_overlap_and_mp_term_name_categorical.ipynb  055_combine_overlap_and_mp_term.ipynb  055_combine_overlap_and_mp_term_name_continuous.ipynb  065_visualize_network.ipynb  075_generate_html_and_js.ipynb  README.md
notebooks/experiments/: template.ipynb
notebooks/notebooks-experiments/: 20250414-00-druggable.ipynb  20250414-01-degree.ipynb  20250416-00-sexual-difference.ipynb  20250418-00-load_rawdata.ipynb  20250424-phenodim_impc_api.ipynb  20250509-00-sex-specific-modules.ipynb  20250509-01-life-stage-specific-modules.ipynb  20250606-00-behavior.ipynb  20250709-00-score-distribution.ipynb  20250709-01-obonet.ipynb  20250903-01-pyscript.ipynb  template.ipynb  utils.sh
notebooks/notebooks-web/: 038-resnik-simple.ipynb  150-preprocess_for_cytoscapejs.ipynb  155-preprocess_for_cytoscapejs_using_phenodigm.ipynb  915_deploy_to_web.ipynb
notebooks/notebools-web/: 015_download.ipynb  025_filter_by_pvalue.ipynb  026_split_by_mp_term_name.ipynb  027_db_slimmer.ipynb  027_organizaing_annotation.ipynb  027_split_by_mp_term_name.ipynb  028_summarize_symbol_mgi_id.ipynb  (+23 more)
paper/: citation.md  introduction.md
reports/: dataset.md  list_modules.rda  symbol_mp_zygosity_effectsize.csv
scripts/: 010-download.sh  025-filter_pvalue.R  032-split_by_mp_term_name.R  035-clustering.py  037-calc_overlap.R  037-calc_overlap.py  compute_module.R  connected_components.py  donwload_impc_phenstat.py  download.sh  download_impc_results.py  generate_html_js.sh  ml.py  netzoo.R  preprocess.R  preprocess.py  scratch.sh  select_pval.py  test_vis_network_with_annotation.ipynb  test_vis_network_with_annotation.py  vis_colar_pallet.py  vis_network.py  vis_network_categorical.py
src/: filterer.py  io_handler.py  main.py
test-tsumugi/: index.html
tests/: test_annotator.py  test_argparser_genes.py  test_count_filterer.py  test_filterer.py  test_formatter.py  test_genes_filterer.py  test_graphml_builder.py  test_io_handler.py  test_life_stage_filterer.py  test_mp_filterer.py  test_network_constructor.py  test_ontology_handler.py  test_report_generator.py  test_score_filterer.py  test_sex_filterer.py  test_similarity_calculator.py  test_webapp_builder.py  test_zygosity_filterer.py  utils.sh
web/: .gitignore  index.html
(+237 files in other folders)
